# Capital

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  capital.service  commitlint.config.js  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  release-please-config.json
engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  db.py  export_openapi.py  logging_config.py  main.py  mcp_server.py  pyproject.toml
engine/ai/: __init__.py  analyze.py  resolve.py  signals.py  usage.py
engine/alembic/: env.py  script.py.mako
engine/api/: __init__.py  ai.py  backtest.py  connections.py  history.py  market.py  news.py  orders.py  portfolio.py  settings.py  strategies.py  system.py  tokens.py  users.py  venues.py
engine/appsettings/: __init__.py  crypto.py  models.py  store.py
engine/auth/: __init__.py  api_tokens.py  audit.py  deps.py  models.py  ratelimit.py  routes.py  security.py  seed.py
engine/backtest/: __init__.py  runner.py
engine/connections/: __init__.py  models.py  seed.json  seed.py  service.py
engine/exchange/: __init__.py  client.py
engine/marketdata/: __init__.py  cache.py  freshness.py  models.py  stream.py
engine/news/: __init__.py  models.py  service.py
engine/notify/: __init__.py  telegram.py
engine/ops/: __init__.py  recovery.py  retention.py  watchdog.py
engine/strategies/: __init__.py  ai_strategy.py  base.py  bollinger.py  builtin.py  dca.py  indicators.py  loader.py  ma_cross.py  macd.py  rsi.py
engine/tests/: conftest.py  test_accounting.py  test_ai_api.py  test_ai_resolve.py  test_ai_signal.py  test_ai_strategy.py  test_allocation_enforcement.py  test_alpaca_venue.py  test_analyze_prompt.py  test_api_tokens.py  test_appsettings.py  test_auth.py  test_backtest_api.py  test_backtest_runner.py  test_binance_alpha_venue.py  test_binance_venue.py  test_candle_cache.py  test_connections.py  (+38 more)
(+125 files in other folders)
